--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the Docs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#index{
+  .btn_color{
+background-color: #17a2b8;
+  border-radius: 18px;
+  text-decoration: none;
+  float: right;
+  margin-top: -30px; 
+color: white;}
+}
+
+.link_color{
+  color:#007bff;
+  text-decoration: underline;
+}
