--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,36 +8,48 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
 </head>
 
+</style>
+
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">FileAmbry</a>
-            </div>
-            <ul class="nav navbar-nav">
+    <nav class="navbar navbar-expand-md navbar-dark bg-info">
+        <a href="#" class="navbar-brand">FileAmbry</a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class=" navbar-nav justify-content-center">
                 <% if user_signed_in?%>
-                <li class="active">
-                    <%= link_to "My docs", docs_path %>
+                <li class="active nav-item">
+                    <%= link_to "My docs", docs_path, :class => "nav-link" %>
                 </li>
-                <li>
-                    <%= link_to "Create Doc", new_doc_path%>
+                <li class="nav-item">
+                    <%= link_to "Create Doc", new_doc_path, :class => "nav-link"%>
                 </li>
-                <li>
-                    <%= link_to "Signout", destroy_user_session_path, method: :delete%>
+                <li class="nav-item">
+                    <%= link_to "Signout", destroy_user_session_path, :class => "nav-link", method: :delete%>
                 </li>
                 <%else %>
-                <li>
-                    <%= link_to "Login", new_user_session_path%>
+                <li class="nav-item">
+                    <%= link_to "Login", new_user_session_path, :class => "nav-link"%>
                 </li>
-                 <li>
-                    <%= link_to "Signup", new_user_registration_path%>
+                <li class="nav-item">
+                    <%= link_to "Signup", new_user_registration_path, :class => "nav-link"%>
                 </li>
                 <%end%>
             </ul>
         </div>
     </nav>
+
     <p class="notice">
         <%= notice %>
     </p>
