added styling to login and sign in pages

--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -12,3 +12,18 @@ color: white;}
   color:#007bff;
   text-decoration: underline;
 }
+
+.label-info{
+  margin-bottom:10px;
+}
+.content-info{
+  margin-bottom: 10px;
+}
+
+.my_pagination{
+  margin-top: 60px;
+  word-spacing: 15px;
+  width: 100%;
+text-decoration: none;
+  }
+
