--- a/app/views/docs/edit.html.erb
+++ b/app/views/docs/edit.html.erb
@@ -1,3 +1,2 @@
 <%= render 'form' %>
-
-<%= link_to "Cancel", doc_path(@doc) %>
+<div class="container"><%= link_to "Cancel", doc_path(@doc), :class=>"btn btn-primary" %></div>
