--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs" style="width:270px;">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -12,7 +12,7 @@
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" }%>
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
@@ -21,6 +21,5 @@
 
     <%= f.button :submit, "Sign up", :class=>"btn btn-info" %>
 <% end %>
-
-<%= render "devise/shared/links" %>
 </div>
+<%= render "devise/shared/links" %>
