working on styling of welcome page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,22 @@
 .navbarCollapse{
   margin-right:15px;
 }
+
+footer {
+
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:auto;
+   padding:6px;
+   width:100%;
+   background:#17a2b8;
+}
+#color_text a{
+  color:white;
+ 
+}
+
+#color_text a:hover {
+color:black;
+  }
