--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,3 +2,26 @@
   line-height: 30px;
   justify-content: center;
 }
+
+#box{
+  background-color: lightgray;
+  width: 100%;
+  height: 250px;
+
+  #getStarted{
+    margin-top: 80px;
+    padding-right:30px;
+    padding-left:30px;
+border-radius: 30px;
+}
+
+
+h1{
+  font-size: 3vw;
+  margin-top: 30px;
+text-align:center;
+  font-style: italic;
+}
+}
+
+
