--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -22,7 +24,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-info navbar-fixed-top" role="navigation">
-        <a href="#" class="navbar-brand">FileAmbry</a>
+        <%= link_to "FileAmbry", welcome_index_path, :class=>"navbar-brand ml-1"%>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,8 +49,8 @@
                 </li>
                  <li class="nav-item dropdown ">
                     <a href="#" class="nav-link dropdown-toggle " data-toggle="dropdown">Welcome Page</a>
-                    <div class="dropdown-menu bg-info">
-                        <a href="#" class="dropdown-item">About</a>
+                    <div id="color_text" class="dropdown-menu bg-info">
+                        <a href="#" class="dropdown-item" >About</a>
                         <a href="#" class="dropdown-item">Sevices</a>
                         <a href="#" class="dropdown-item">Testimony</a>
                          <a href="#" class="dropdown-item">Contact</a>
@@ -66,6 +68,38 @@
         <%= alert %>
     </p>
     <%= yield %>
+
+<!-- Footer -->
+<footer class="page-footer  justify-content-sm-end pt-3 ">
+<div class="row text-center">
+    <div class="col-sm-4 ">
+        <strong style =" font-size: 2vw;">Contact us</strong>
+    </div>
+    <div class="col-sm-8">
+
+          <!-- Facebook -->
+          <a class="fb-ic">
+            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+        
+          <!-- Google +-->
+          <a class="gplus-ic">
+            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!--Linkedin -->
+          <a class="li-ic">
+            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!--Instagram-->
+          <a class="ins-ic">
+            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+        
+        </div>
+</div>
+</footer>
+<!-- Footer -->
+
 </body>
 
 </html>
