--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 
     <div class="container">
-        <div class="row m-4">
+        <div class="row m-4" id ="About">
             <div class="col-sm-6">
                 <img src="/assets/background.jpg" width="100%">
             </div>
@@ -17,7 +17,7 @@
         <br>
         <br>
         <!-- card section -->
-        <div class="row">
+        <div class="row" id="Testimony">
             <div class="col-sm-3">
                 <div class="card">
                     <img class="card-img-top" src="/assets/card1.jpeg">
