added model for contactCopy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
         <%= alert %>
     </p>
     <%= yield %>
-
+<br>
 <!-- Footer -->
 <footer id="Contact"class="page-footer  pt-3" style="color:white">
 <div class="row text-center">
@@ -101,6 +101,22 @@
 </div>
 </footer>
 <!-- Footer -->
+
+<div class="modal fade" id="copyContactModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-body">
+          <p>number copied to your clipboad</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
 
 </body>
 
