--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<progress value="0" class="progress-bar-striped  bg-danger" style = "width:100%; height:4px;position: fixed; z-index: 1;color:blue"></progress>
 <div class="container">
     <div class="row m-4" id="About">
         <div class="col-sm-6">
