set the allignment for all pages

--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -1,4 +1,10 @@
-<div class ="container">
+<style >
+    .align_center{
+    margin-top: 130px;
+  padding-left:30%;
+}
+</style>
+<div class ="container align_center">
   <%= form_for  @doc   do|f| %>
   <div class="form-group">
   <%= f.label :title, class: "control-label" %>
