--- a/app/views/docs/show.html.erb
+++ b/app/views/docs/show.html.erb
@@ -1,4 +1,10 @@
-<div class ="container">
+<style >
+    .align_center{
+    margin-top: 130px;
+  padding-left:30%;
+}
+</style>
+<div class ="container align_center">
 <p><strong> content: &nbsp;</strong>
         <%= @doc.title %>
     </p>
