--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -3,11 +3,60 @@
     margin-top: 150px;
   padding-left:40%;
 }
+.button5{
+    width: 50px;
+    border-radius: 50%;
+    float: right;
+    margin-top: 500px;
+    margin-right: 50px;
+}
+
+.dropdown-menu{
+    border: none;
+    padding: 0rem !important;
+}
+
+.drop_button{
+    width:50px; 
+    margin:3px;
+    border-radius: 50%
+}
+.drop_button_color{
+   color: white;
+}
+.dropdown-item{
+    margin-bottom:  8px;
+    padding-left:60px;
+}
+
+}
+
 </style>
+
 <% if @docs.count == 0 %>
-<div class="align_center">
-<h2>&nbsp; &nbsp;&nbsp;Get started</h2>
-<%= link_to "Create your first document", new_doc_path, :class => "btn btn-info",:style =>"border-radius:20px;"%>
+<div >
+    <div class="align_center">
+<h5 >Get started</h5>
+<p> click on plus icon to create document</p>
+</div>
+<div class ="dropup">
+<button type="button" class="btn btn-success button5 " data-toggle="dropdown" >
+          <span class=" fa fa-plus"></span> 
+        </button>
+<ul class="dropdown-menu  dropdown-menu-left">
+          <li class = "dropdown-item"><button class = " drop_button btn btn-success"><%= link_to '<i class="fa fa-file-alt drop_button_color "></i>'.html_safe,textnote_path%></button></li>
+
+           <li class = "dropdown-item"><button class = "drop_button btn btn-success"><%= link_to '<i class="fa fa fa-clock drop_button_color "></i>'.html_safe,remainder_path%></button></li>
+     
+           <li class = "dropdown-item"><button class = "drop_button btn btn-success"><%= link_to '<i class="fa fa-microphone drop_button_color "></i>'.html_safe,audio_path%></button></li>
+      
+           <li class = "dropdown-item"><button class = "drop_button btn btn-success"><%= link_to '<i class="fa fa-paperclip drop_button_color "></i>'.html_safe,attachment_path%></button></li>
+
+           <li class = "dropdown-item"><button class = "drop_button btn btn-success"><%= link_to '<i class="fa fa-camera drop_button_color "></i>'.html_safe, camera_path%></button></li>
+           <li class = "dropdown-item"><button class = "drop_button btn btn-success"><%= link_to '<i class="fa fa-pen drop_button_color "></i>'.html_safe, handwriting_path%></button></li>
+  </ul>  
+</div>
+
 </div>
 <%end%>
       <div class="container">
