--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -34,3 +34,18 @@ text-decoration: none;
   border-radius: 20px;
    padding-left: 60px;
 }
+
+.overlay {
+    position:absolute;
+    background-color: rgba(0, 0, 0, 0.33);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+
+
+
+
+
