--- a/app/views/docs/attachment.html.erb
+++ b/app/views/docs/attachment.html.erb
@@ -1,4 +1,12 @@
-attachment
+<div class="container">    
+            <div class="upload-drop-zone" id="drop-zone">
+                <input type="file" id="myFile" onchange ="attachmentFile()">
+        </div>
+        <div id ="dropBox">
+          <p id ="dropBoxHeading"> Select one or more files<p>
 
-<button onclick="goBack()">Go Back</button>
+         <ol id= "list">
+          </ol></div>
+</div>
+
 
