--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                     <%= link_to "Signout", destroy_user_session_path, :class => "nav-link", method: :delete%>
                 </li>
                  <li class="nav-item">
-                    <%= link_to "Edit Profile", edit_user_registration_path, :class => "nav-link" %>
+                     <%= link_to '<i class="fa fa-user-edit "></i>'.html_safe,edit_user_registration_path, :style=>"padding-left:5px;",:class => "nav-link"%>
                 </li>
                 <%else %>
                 <li class="nav-item">
@@ -64,7 +64,7 @@
             </ul>
         </div>
     </nav>
-
+<progress value="0" class="progress-bar-striped  bg-danger" style = "width:100%;height:4px;position: fixed; z-index: 1;margin-top: 55px;"></progress>
     <p class="notice">
         <%= notice %>
     </p>
