--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
-<progress value="0" class="progress-bar-striped  bg-danger" style = "width:100%; height:4px;position: fixed; z-index: 1;color:blue"></progress>
-<div class="container">
+
+
+<div class="container"style = "padding-top: 20px;" >
     <div class="row m-4" id="About">
         <div class="col-sm-6">
             <img src="/assets/background.jpg" width="100%">
