--- a/app/views/docs/attachment.html.erb
+++ b/app/views/docs/attachment.html.erb
@@ -1,4 +1,4 @@
-<div class="container">    
+<!-- <div class="container">    
             <div class="upload-drop-zone" id="drop-zone">
                 <input type="file" id="myFile" onchange ="attachmentFile()">
         </div>
@@ -7,6 +7,28 @@
 
          <ol id= "list">
           </ol></div>
+</div> -->
+
+<!-- <div class="container" >
+
+  <fieldset>
+    <legend>Upload photo</legend>
+    <input type="file" name="file" id="photo">
+    <input type="submit" value="Upload" onclick="attachmentFile()" >
+  </fieldset>
+
+</div> -->
+
+
+
+<div class="container" style = "margin-top: 50px;"> 
+ <legend>Upload photo</legend>   
+            <div class="upload-drop-zone" id="drop-zone">
+                <input type="file" id="photo" onchange ="attachmentFile()">
+        </div>
+        <div id ="dropBox">
+          <p id ="dropBoxHeading"> Select one or more files<p>
+
+         <ol id= "list">
+          </ol></div>
 </div>
-
-
