--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -70,11 +70,34 @@ text-decoration: none;
 }
 
 #dropBox{
-margin-top: 10px;
-margin-left: 30vw;
+margin-top: 5px;
+margin-left: 20vw;
 line-height: 20px;
 }
 
 li{
   margin-bottom: 15px;
+}
+
+
+#drop-area {
+  border: 2px dashed #ccc;
+  border-radius: 20px;
+  width: 480px;
+  font-family: sans-serif;
+  margin: 100px auto;
+  padding: 80px;
+  background-color: #E8E8E8;
+}
+#drop-area.highlight {
+  border-color: purple;
+}
+
+
+#MyAttach{
+  margin-top: 30px;
+  margin-right: 10px;
+  border-radius: 15px;
+  float: right;
+  color: white;
 }
