--- a/app/views/docs/my_attachments.html.erb
+++ b/app/views/docs/my_attachments.html.erb
@@ -1,13 +1,4 @@
-<h3>jbsjhbc</h3>
-<div class="container" id="some_id">
- 
-    <div class="row">
 
-      <div class="col-lg-4 col-md-12 mb-4" id="singleAttach">
-      
-      </div>
-    
-
-    </div>
-   
-  </div>
+<div class="container" id="some_id"  style = "margin-top: 50px;">
+ <div class = "row" id="singleAttach0"> </div>
+</div>
